Only create DockedBackgroundWidget as needed.

This util widget shows up as a user window shelf icon in mash.
Don't create this widget until it's needed (not used in mash).

We currently put kShellWindowId_DockedContainer windows in mash::wm::mojom::Container::USER_WINDOWS, which might be okay in the long run, but even if we put them in a separate container, we would need UserWindowControllerImpl to track that container's set of user windows (to show shelf icons); so we would need to single out this widget as a non-user-window somehow.

We currently don't support docking in mash, but if we choose to use ash's DockedWindowLayoutManager (and DockedBackgroundWidget), we'll need to avoid tracking this background widget as a user window.

BUG=603419
TEST="mojo_runner mojo:mash_session" doesn't show a mysterious shelf icon at startup.
R=sky@chromium.org

Committed: https://crrev.com/801884789c92a12487efe078dd984a6a3ecda96e [formerly 14816ec6589c41b5a34f7b534b1c1565c97fe2d7]
Cr-Commit-Position: refs/heads/master@{#387182}

Review URL: https://codereview.chromium.org/1882713004

Cr-Commit-Position: refs/heads/master@{#387486}

Former-commit-id: 21a784910f87c59e1db7d8034088d34268753d9d